[gd_scene load_steps=10 format=3 uid="uid://rvavq5jbr2i4"]

[ext_resource type="Texture2D" uid="uid://67a61cryxo2v" path="res://Assets/Texture/BossCapy/BossCapyShip.png" id="1_2edpg"]
[ext_resource type="Script" path="res://Scripts/BossCapy/boss_capy.gd" id="1_kf1v4"]
[ext_resource type="PackedScene" uid="uid://d0asmgt0x5fq1" path="res://Scenes/Particles/fire_engine2.tscn" id="2_ie5ff"]
[ext_resource type="Texture2D" uid="uid://cj1cwlcqpr8vu" path="res://Assets/Texture/BossCapy/BossCapyRayGun.png" id="2_j0ne1"]
[ext_resource type="PackedScene" uid="uid://chia8b5acjtar" path="res://Scenes/Component/health_component.tscn" id="3_2sgfc"]
[ext_resource type="PackedScene" uid="uid://wja8hp8m0buw" path="res://Scenes/Component/hitbox_component.tscn" id="3_b2s80"]
[ext_resource type="Texture2D" uid="uid://bwotjj0ud15yt" path="res://Assets/Texture/BossCapy/BossCapyRayRocket.png" id="3_mx31x"]
[ext_resource type="PackedScene" uid="uid://dyk4okm8p0hyo" path="res://Scenes/BulletStuff/laser_spawner.tscn" id="7_q0okk"]
[ext_resource type="PackedScene" uid="uid://1mkaqh22mptf" path="res://Scenes/BulletStuff/missile_spawner.tscn" id="7_y4nbn"]

[node name="BossCapy" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_kf1v4")

[node name="HealthComponent" parent="." instance=ExtResource("3_2sgfc")]
max_hp = 300.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("3_b2s80")]
collision_layer = 2
health = NodePath("../HealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(-53, -4, -53, 5, -10, 5, -10, 20, -26, 20, -26, 28, 14, 28, 14, 20, 7, 20, 7, 7, 34, 3, 51, 3, 51, -10, 35, -10, 28, -38, 9, -56, -11, -56, -30, -40, -34, -19, -28, -4)

[node name="GPUParticles2D" parent="." instance=ExtResource("2_ie5ff")]
position = Vector2(38, -3)

[node name="Main" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -22)
texture = ExtResource("1_2edpg")

[node name="RayGun" type="Node2D" parent="."]
use_parent_material = true
position = Vector2(-24, 0)

[node name="Sprite2D" type="Sprite2D" parent="RayGun"]
use_parent_material = true
texture = ExtResource("2_j0ne1")

[node name="LaserSpawner" parent="RayGun" instance=ExtResource("7_q0okk")]
position = Vector2(-33, 0)
show_warning = false
use_texture_width = true

[node name="RocketLauncher" type="Node2D" parent="."]
use_parent_material = true
position = Vector2(-6, 22)

[node name="Sprite2D" type="Sprite2D" parent="RocketLauncher"]
use_parent_material = true
texture = ExtResource("3_mx31x")

[node name="MissileSpawner" parent="RocketLauncher" instance=ExtResource("7_y4nbn")]
position = Vector2(-22, 2)
shoot_interval = 3.0

[connection signal="change_state" from="." to="." method="_on_change_state"]
[connection signal="taking_damage" from="HealthComponent" to="." method="_on_health_component_taking_damage"]
[connection signal="zero_hp" from="HealthComponent" to="." method="_on_health_component_zero_hp"]
[connection signal="shot" from="RayGun/LaserSpawner" to="." method="raygun_shoot"]
